fix: section class padding and horizontal scrolling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@
   }
 
   .sectionContainer {
-    @apply relative mx-auto flex h-screen flex-col items-center justify-evenly px-10 md:flex-row;
+    @apply relative mx-auto flex h-screen flex-col items-center justify-evenly md:flex-row;
   }
 
   .sectionHeader {
